Added questions, and disclaimer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <section>
         </section>
       </main>
+      <span>The material on this site is for educational purposes only, and is not a substitute for medical advice, diagnosis or treatment provided by a qualified health care provider.</span>
     <script src="store.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
+
 
