--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
   </head>
   <body>
     <header role="banner">
-      <h1>COVID-19 Pandemic</h1>
-      score: <span id="score">0</span>
+      <h1>COVID-19 Quizapp</h1>
+      SCORE: <span id="score"> 0</span>
     </header>
     <main aria-live="assertive">
-        <a href="https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"><img src="https://media.graytvinc.com/images/810*456/covid-19-global-cases-map2.jpg"></a>
-        <section>
-        </section>
-      </main>
-      <span>The material on this site is for educational purposes only, and is not a substitute for medical advice, diagnosis or treatment provided by a qualified health care provider.</span>
+      <a href="./img/bg.jpg" target="_blank">
+        <img src="./img/tiny-bg.jpg" target="_blank">
+      </a>
+      <section>
+      </section>
+    </main>
+      <p>The material on this site is for educational purposes only, </br>
+        and is not a substitute for medical advice, diagnosis or </br>
+        treatment provided by a qualified health care provider.</p>
     <script src="store.js"></script>
     <script src="index.js"></script>
   </body>
