update background image

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       SCORE: <span id="score"> 0</span>
     </header>
     <main aria-live="assertive">
-      <a href="./img/bg.jpg" target="_blank">
+      <!-- <a href="./img/bg.jpg" target="_blank">
         <img src="./img/tiny-bg.jpg" target="_blank">
-      </a>
+      </a> -->
       <section>
       </section>
     </main>
-      <p>The material on this site is for educational purposes only, </br>
+      <p class='disclaimer'>The material on this site is for educational purposes only, </br>
         and is not a substitute for medical advice, diagnosis or </br>
         treatment provided by a qualified health care provider.</p>
     <script src="store.js"></script>
