--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css"> 
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Spectral:400,600" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Spectral:400,600" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
+    <div class='container'>
     <header role="banner">
       <h1>COVID-19 Quizapp</h1>
       SCORE: <span id="score"> 0</span>
     </header>
     <main aria-live="assertive">
-      <!-- <a href="./img/bg.jpg" target="_blank">
-        <img src="./img/tiny-bg.jpg" target="_blank">
-      </a> -->
       <section>
       </section>
     </main>
-      <p class='disclaimer'>The material on this site is for educational purposes only, </br>
+      <p class='text-center'>The material on this site is for educational purposes only, </br>
         and is not a substitute for medical advice, diagnosis or </br>
         treatment provided by a qualified health care provider.</p>
+  </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+  </script>
     <script src="store.js"></script>
     <script src="index.js"></script>
   </body>
